# ChangeLog for app-portage/emerge-delta-webrsync
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/emerge-delta-webrsync/ChangeLog,v 1.46 2014/10/07 22:10:46 zmedico Exp $

*emerge-delta-webrsync-3.7.2-r1 (07 Oct 2014)

  07 Oct 2014; Zac Medico <zmedico@gentoo.org>
  +emerge-delta-webrsync-3.7.2-r1.ebuild, -emerge-delta-webrsync-3.7.2.ebuild:
  3.7.2-r1 version bump to fix bug #506192 (failure when tarsync is not
  installed).

*emerge-delta-webrsync-3.7.2 (27 Sep 2014)

  27 Sep 2014; Zac Medico <zmedico@gentoo.org>
  +emerge-delta-webrsync-3.7.2.ebuild:
  Version bump, fixes bug #523494.

  27 Sep 2014; Zac Medico <zmedico@gentoo.org>
  emerge-delta-webrsync-3.6.2.ebuild, emerge-delta-webrsync-3.7.1.ebuild:
  Point SRC_URI to github, since gitweb has been down for some time.

  23 Dec 2013; Mike Frysinger <vapier@gentoo.org>
  emerge-delta-webrsync-3.6.2.ebuild:
  Mark alpha/ia64/ppc stable #454046.

*emerge-delta-webrsync-3.7.1 (10 Jul 2013)

  10 Jul 2013; Zac Medico <zmedico@gentoo.org>
  +emerge-delta-webrsync-3.7.1.ebuild, -emerge-delta-webrsync-3.7.0.ebuild:
  3.7.1 version bump. This fixes bug #476416 (interference triggered by empty
  files remaining after failed fetch attempts).

*emerge-delta-webrsync-3.7.0 (22 Jun 2013)

  22 Jun 2013; Zac Medico <zmedico@gentoo.org>
  +emerge-delta-webrsync-3.7.0.ebuild:
  3.7.0 version bump. This fixes bug #286373 (check gpg sig when downloading a
  full snapshot).

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  emerge-delta-webrsync-3.6.2.ebuild:
  Stable for x86, wrt bug #454046

  28 Jan 2013; Zac Medico <zmedico@gentoo.org>
  emerge-delta-webrsync-3.6.2.ebuild:
  Use REPLACING_VERSIONS instead of has_version.

  28 Jan 2013; Zac Medico <zmedico@gentoo.org>
  emerge-delta-webrsync-3.6.2.ebuild:
  Comment on non-fatal chgrp, which is intended for prefix compatibility.

  28 Jan 2013; Chema Alonso <nimiux@gentoo.org>