@@ -11,13 +11,15 @@ DIST emerge-delta-webrsync-3.7.2 22344 SHA256 6fd9e7cfeff9d8755435f7c448b015a6d3
 EBUILD emerge-delta-webrsync-3.5.1-r3.ebuild 1599 SHA256 04608d3154bc8d4e93778ea8b969ed0ac1c4bde965d795d6554fd2140eba5017 SHA512 514f5871ba5ce8fadce97a3b3fd9a9e382f687e612fc77b00e75c5e2ba2c636fd679f493836c4b47672cbafedcf905276d61702bb44d0ed9815f77f81fcf62e4 WHIRLPOOL 48caf5a759f4f2a70c428fb6440027870558443963941b2aa8df67f9791a767860b82ec0ac6eb3baeb5e4e215a1111b4f2c820e47a29e03c538585deac9cf107
 EBUILD emerge-delta-webrsync-3.6.2.ebuild 1256 SHA256 b48272d29e4a00beee81f482e803c5b5516447e425ab84c1c10a4346ae660732 SHA512 5969ab705c3c5ca8c99d1e65d33d1049e4db346f88b8626e93272e67ddb16162f1cccb1a2705177c623e5806a0c7565ee3267a8e0698d8a8a9b51748f89fe796 WHIRLPOOL fd8a0e4c8f9d44ef579b672d28d0a84b9d6a15883e8eb5a360f02586c572aec93ac5ef7062c8b2cee2bee399c4ba3bd9ca5e199ca0eaa675c27b37ac673b7900
 EBUILD emerge-delta-webrsync-3.7.1.ebuild 1260 SHA256 9f95667e83fb07995dfadaaef86baf94c27a9f53bc090d73ca588b88a93e7a45 SHA512 b8d5d0393231e4629c45380f80a5602fb1d69bb76fcf0244269100b39b654f3e5abe09c992023bb0d837c8e7852b93c7351bbbb3ba787df7ebbaa35f166ceecc WHIRLPOOL 81acd287462dc283d07d95313c478f9e60a864a58be9c5e090be0178ab31a63ccf90b41491d831e378388cbff8dc3e133a0be36bea86a5c9ce0258d5a758bcd7
-EBUILD emerge-delta-webrsync-3.7.2-r1.ebuild 1374 SHA256 cb4db7832d1325c6e84aaa909fb166f10efdb770e95ba9ffe7ee2f4db58e9497 SHA512 932fb22299e88419c57ef6e23b581d4ea93a65782bea258fa295a2cc9aa1ffe058322d35be71e8aa8028eb3677c1e8217550b4d9a6750b6bcbd8fa8210e30a78 WHIRLPOOL f8b1912234599963719e5dd630dc628759329075bdefc3c60284198ee9acbdaeeeb6302275bfa858b47b0db26b8ead56c9110a00cc4c3955cc24163810ad34e3
-MISC ChangeLog 8973 SHA256 45938e75075af7bfe30131bc173dd9f4d46f2d7e034946443ae90381c74184b0 SHA512 e4bef4c91fc03060cd4675255a18993e3fdb2af1e67e60eb08f1d31637dfa8768756107ae41c70f07fe49a034f8a70c07b2c0dbfeadef07d38de7a4aa8779976 WHIRLPOOL 669a9f2e35d41f505b891d8be7082dac5184a31da746f0c91e1f6a355d4ac2364bfc0282e78b5e33a0d04f52452934169062810425352965ea86437ecc7ab82d
+EBUILD emerge-delta-webrsync-3.7.2-r1.ebuild 1373 SHA256 a8795f5680d2a12b3b744e3c77192282f253022b6fdfcda9ced9b5cb46b1613e SHA512 93266dc865ad36e33b8e3f3ffe3fbc122cf5efee0c37201a64f1266fba2410b44921a2e8f16649f05db21e2d3f9f28a3be70db656754e641b5a1f009227eddec WHIRLPOOL 5b2bac969430f25b9306a9ea00f670eeaf9e8f85490d78137b18f3725ad1e6e2f2d74db71cfb04708e7a701d90f5c26cf3e78a553fb4dc15b3b2a166a9a95843
+MISC ChangeLog 9096 SHA256 8fef649f522b173980aa87429ca4990806bc3a9f74b5f837c0e8e1cabc67729e SHA512 a3b404aa6d1c3fceecfbce47417beb31802e02495b76b4d2fc7df6babddbd9df5594278f6d12a26e1a0abe2302ca1657c9658b38e57b01f4e33ca45eb038cc63 WHIRLPOOL 811480b268243e55ffc484d6636881a7f48eef137b5efe168d795033667c2f8f89de1912686bbfbda787b94d86cb6561cc8563548551d70cf644d9321d828728
 MISC metadata.xml 279 SHA256 a76f2982f346dbf25deea7be7857453068b892137eb3527784413f21a5ab972a SHA512 806b7afa22c9dbc8aa93dd0d882f82778d8e2a9bb28db416463664327ebb7fd3582cb3f40a69c69eecee1a46bab32359f6d95a7caae92fdb3bc6b009cedeb84e WHIRLPOOL 496343e99712cf241029d5aacc8aa70300cd3fe7bae7ec1ecf4e96c815604b9408ff2c52a5ffd0666b1008a989e766393f47c021ea0a34cd49e9d213121376bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ0ZOcACgkQ/ejvha5XGaMOrwCg0pQ6XJxojcp431UmvJYHHVf8
-nqYAoOyivjj50GiHLhTPbPHoXEzdsvgP
-=B6Dv
+iJwEAQEIAAYFAlWmkDkACgkQG9wOWsQutdZJ9AQAvPfaQ4eyhGpiKHSAHOBBKJIf
+3iCnE1ey+pKiIsfLg68nrzI60fc0NM5NrA/60vSaDfahMqWHVB4ZGTmJCxRIGuEv
+tc1sh7grBSVlPX6Am4/TVBaofB69qWG4foWclphMPEdPgpUj+Am13OE/w2iTeF/a
+mGDZEQNNLluHBtLQdCQ=
+=7IWs
 -----END PGP SIGNATURE-----
