@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/emerge-delta-webrsync
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/emerge-delta-webrsync/ChangeLog,v 1.46 2014/10/07 22:10:46 zmedico Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/emerge-delta-webrsync/ChangeLog,v 1.47 2015/07/15 16:56:32 zlogene Exp $
+
+  15 Jul 2015; Mikle Kolyada <zlogene@gentoo.org>
+  emerge-delta-webrsync-3.7.2-r1.ebuild:
+  amd64 stable wrt bug #554906
 
 *emerge-delta-webrsync-3.7.2-r1 (07 Oct 2014)
 
